--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,14 @@ h1 {
 	
 	text-align: center;
 	color: blue;
-}
+	}
 
 p {
 	text-align: justify;
 	color: black;
+}
+
+
+img.mediana{
+  width: 50px; height: 50px;
 }
